# autoriskmodel

./: .gitignore  README.md  README_CREDIT.md  REPORTER_GUIDE.md  init.sh  prepare.py  program.md  pyproject.toml  reporter.py  requirements.txt  train.py
reference/: DATA_FORMAT.md
